/*
export PATH=/opt/homebrew/bin:$PATH
cd ./auth/
protoc --go_out=./ --go-grpc_out=./ api/auth.proto
 */
syntax = "proto3";

package auth;

option go_package = "/grpcapi;auth";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message RegisterRequest {
  string Login = 1;
  string Password = 2;
  string TypeUser = 3; //customer or driver
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string Login = 1;
  string Password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message ValidateTokenRequest {
  string Login = 1;
  string Token = 2;
}

message ValidateTokenResponse {
  bool is_valid = 1;
}

message ChangePasswordRequest {
  string Login = 1;
  string Token = 2;
  string OldPassword = 3;
  string NewPassword = 4;
}

message ChangePasswordResponse {
  string message = 1;
}